--- a/app/src/main/res/layout/activity_almanax.xml
+++ b/app/src/main/res/layout/activity_almanax.xml
@@ -10,4 +10,12 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.giroux.kevin.dofustuff.activity.Almanax.AlmanaxActivity">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerViewAlmanax"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+    </android.support.v7.widget.RecyclerView>
+
 </RelativeLayout>
