--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -28,8 +28,15 @@
             android:orientation="vertical"
             android:paddingTop="48dp"
             android:paddingBottom="@dimen/activity_vertical_margin"
-            android:layout_marginLeft="@dimen/signin_horizontal_margin"
-            android:layout_marginRight="@dimen/signin_horizontal_margin">
+            android:layout_marginLeft="@dimen/padding_default"
+            android:layout_marginRight="@dimen/padding_default">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="117dp"
+                android:scaleType="centerInside"
+                android:src="@drawable/dofus_logosizechange"
+                android:contentDescription="@string/logoApp"/>
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
