--- a/app/src/main/res/layout/almanax_item.xml
+++ b/app/src/main/res/layout/almanax_item.xml
@@ -1,6 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<android.support.v7.widget.CardView android:layout_width="match_parent"
+    android:layout_margin="5dp"
+    android:layout_height="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-</LinearLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <pl.droidsonroids.gif.GifImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/loading"/>
+
+    <TextView
+        android:layout_margin="@dimen/text_margin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/characterLevel"
+        android:text="@string/app_name"
+        android:layout_below="@+id/characterImage"
+        android:background="?android:selectableItemBackground"
+        android:textSize="12sp" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:text="@string/app_name"
+        android:layout_height="wrap_content"
+        android:id="@+id/characterName"
+        android:textSize="15sp"
+        android:layout_below="@+id/characterLevel"
+        android:background="?android:selectableItemBackground"
+        android:layout_margin="@dimen/text_margin"
+        android:textColor="#333" />
+
+
+</RelativeLayout>
+    </android.support.v7.widget.CardView>
+
+
