--- a/app/src/main/res/layout/almanax_item.xml
+++ b/app/src/main/res/layout/almanax_item.xml
@@ -1,41 +1,220 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView android:layout_width="match_parent"
+<android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_margin="5dp"
     android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android">
-
     <RelativeLayout
+        android:layout_margin="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
-        <pl.droidsonroids.gif.GifImageView
+        <RelativeLayout
+            android:id="@+id/linearDate"
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:src="@drawable/loading"/>
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:weightSum="2"
+                android:orientation="horizontal"
+                android:layout_height="wrap_content"
+                android:baselineAligned="false">
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:orientation="vertical"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1">
 
-    <TextView
-        android:layout_margin="@dimen/text_margin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/characterLevel"
-        android:text="@string/app_name"
-        android:layout_below="@+id/characterImage"
-        android:background="?android:selectableItemBackground"
-        android:textSize="12sp" />
+                    <TextView
+                        android:layout_gravity="end"
+                        android:textAlignment="textEnd"
+                        android:layout_width="match_parent"
+                        android:id="@+id/alamanaxDay"
+                        android:textSize="25sp"
+                        android:textStyle="bold"
+                        android:layout_height="wrap_content" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:text="@string/app_name"
-        android:layout_height="wrap_content"
-        android:id="@+id/characterName"
-        android:textSize="15sp"
-        android:layout_below="@+id/characterLevel"
-        android:background="?android:selectableItemBackground"
-        android:layout_margin="@dimen/text_margin"
-        android:textColor="#333" />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:orientation="vertical"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_gravity="start"
+                        android:textAlignment="textStart"
+                        android:layout_width="match_parent"
+                        android:id="@+id/alamanaxMonth"
+                        android:textStyle="bold"
+                        android:textSize="25sp"
+                        android:layout_height="wrap_content" />
+                </LinearLayout>
+
+            </LinearLayout>
 
 
-</RelativeLayout>
+
+        </RelativeLayout>
+
+        <LinearLayout
+            android:id="@+id/linearBoss"
+            android:layout_below="@id/linearDate"
+            android:layout_width="match_parent"
+            android:layout_height="500dp"
+            android:weightSum="100"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:id="@+id/linearImage"
+                android:gravity="center"
+                android:layout_weight="92"
+                android:layout_gravity="center_vertical"
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:layout_height="0dp">
+
+                <ImageView
+                    android:id="@+id/imagesAlamanax"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:adjustViewBounds="true"
+                    android:contentDescription="loading"
+                    android:cropToPadding="false"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/cra_male"
+                    android:visibility="visible"
+                    app:srcCompat="@drawable/enutrof_male" />
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_weight="2"
+                android:orientation="horizontal"
+                android:layout_below="@id/linearImage"
+                android:id="@+id/linearTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/almanaxTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="15"
+                    android:textStyle="bold"
+                    android:layout_gravity="center"
+                    android:textSize="25sp" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_weight="2"
+                android:orientation="horizontal"
+                android:layout_below="@id/linearTitle"
+                android:id="@+id/linearBossText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/almanaxBoss"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:textSize="15sp" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_weight="2"
+                android:orientation="horizontal"
+                android:layout_below="@id/linearBossText"
+                android:id="@+id/linearEffectiveTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/alamanaxEffectiveTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="12"
+                    android:textStyle="bold"
+                    android:textSize="25sp" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_weight="2"
+                android:orientation="horizontal"
+                android:layout_below="@id/linearEffectiveTitle"
+                android:id="@+id/linearEffectiveContent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/alamanaxEffectiveContent"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:textSize="15sp" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+        <RelativeLayout
+            android:layout_below="@+id/linearBoss"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:id="@+id/linearQuest"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:id="@+id/almanaxQuest"
+                    android:textSize="25sp"
+                    android:textStyle="bold"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/linearSubQuest"
+                android:layout_below="@id/linearQuest"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:id="@+id/almanaxSubQuest"
+                    android:textSize="15sp"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/linearBonus"
+                android:layout_below="@id/linearSubQuest"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:id="@+id/almanaxBonus"
+                    android:textSize="25sp"
+                    android:textStyle="italic|bold"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_below="@id/linearBonus"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:id="@+id/almanaxSubBonus"
+                    android:textSize="15sp"
+                    android:textStyle="italic"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+
+
+        </RelativeLayout>
+
+    </RelativeLayout>
     </android.support.v7.widget.CardView>
 
 
