--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -35,7 +35,7 @@
         <item
             android:id="@+id/nav_lock"
             android:icon="@drawable/ic_menu_lock"
-            android:title="@string/Tools" />
+            android:title="@string/Administration" />
 
     </group>
 
