--- a/app/src/main/res/layout/activity_almanax.xml
+++ b/app/src/main/res/layout/activity_almanax.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.giroux.kevin.dofustuff.activity.Almanax.AlmanaxActivity">
+    tools:context="com.giroux.kevin.dofustuff.activity.almanax.AlmanaxActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerViewAlmanax"
